--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,6 +5,7 @@
 }
 
 body {
+    min-height: 100dvh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -13,6 +14,8 @@ body {
 
 .card {
     width: 20%;
+    max-width: 300px;    
+    margin-inline: 16px;
     margin-top: 20px;
     margin-bottom: 20px;
     background-color: #fff;
